[gd_scene load_steps=35 format=3 uid="uid://1ct4yyftx7wk"]

[ext_resource type="Script" uid="uid://cn1hixuyrd2q5" path="res://Scripts/player.gd" id="1_kelma"]
[ext_resource type="Material" uid="uid://cqcc5kswquwhb" path="res://gra/canves_items/player_1.tres" id="2_p6qlh"]
[ext_resource type="Texture2D" uid="uid://c3wnpi3ono8qo" path="res://gra/game Player anim/Player_1/paetcals_shap.png" id="2_y8w33"]
[ext_resource type="Texture2D" uid="uid://bjn7vteyuk3l8" path="res://gra/Explosions pack/explosion-1-f/Sprites.png" id="3_xa75v"]
[ext_resource type="Texture2D" uid="uid://cjwtr4gswea2f" path="res://gra/Explosions pack/explosion-1-a/spritesheet.png" id="4_58ae2"]
[ext_resource type="FontFile" uid="uid://dwumuhu4jd2uf" path="res://gra/fonts/Pixel Game.otf" id="5_ivevv"]
[ext_resource type="Texture2D" uid="uid://d1njb4delqp7a" path="res://gra/UI/circle.png" id="6_r6jsd"]
[ext_resource type="AudioStream" uid="uid://dfx1l481n57hs" path="res://Audios/Minecraft-hit-sound-djlunatique.com_.mp3" id="8_c31lq"]
[ext_resource type="AudioStream" uid="uid://dsc42634bjcxv" path="res://Audios/explosion-312361.mp3" id="8_c68nv"]
[ext_resource type="AudioStream" uid="uid://c5p6u2ycytvhd" path="res://Audios/hit loop.mp3" id="9_1sypm"]
[ext_resource type="AudioStream" uid="uid://cmoo7p7x6p8t5" path="res://Audios/landing-on-grass-40650.mp3" id="11_4ao7i"]
[ext_resource type="AudioStream" uid="uid://tu4io82tfr5d" path="res://Audios/sand-step-95801.mp3" id="12_1sypm"]
[ext_resource type="AudioStream" uid="uid://dltcxa861rilf" path="res://Audios/grenade-launcher-106342.mp3" id="12_2dof7"]
[ext_resource type="AudioStream" uid="uid://cqh0fukqewswy" path="res://Audios/minecraft-type-firework-blast.wav" id="13_4ao7i"]
[ext_resource type="AudioStream" uid="uid://cfsif5lq0ffu5" path="res://Audios/fist-fight-192117.mp3" id="15_fn0wv"]

[sub_resource type="Curve" id="Curve_xa75v"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0.0049261, 360), 0.0, 0.0, 0, 0, Vector2(1, -360), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_2sw5t"]
curve = SubResource("Curve_xa75v")

[sub_resource type="Curve" id="Curve_58ae2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.128079, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ij4jb"]
curve = SubResource("Curve_58ae2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ivevv"]
lifetime_randomness = 0.56
particle_flag_disable_z = true
angle_min = -720.0
angle_max = 720.0
angle_curve = SubResource("CurveTexture_2sw5t")
spread = 180.0
initial_velocity_max = 173.48
gravity = Vector3(0, 0, 0)
scale_min = 0.01
scale_max = 0.17
color = Color(1, 0.666874, 0.302317, 1)
emission_curve = SubResource("CurveTexture_ij4jb")

[sub_resource type="Curve" id="Curve_r6jsd"]
_limits = [-360.0, 360.0, 0.0, 1.0]
_data = [Vector2(0, 28.5283), 0.0, 286.38, 0, 0, Vector2(0.945813, 120.906), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_p6qlh"]
curve = SubResource("Curve_r6jsd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2sw5t"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 20.48
angle_min = -720.0
angle_max = 720.0
angle_curve = SubResource("CurveTexture_p6qlh")
inherit_velocity_ratio = 1.0
spread = 180.0
initial_velocity_max = 71.83
gravity = Vector3(0, 300, 0)
scale_min = 0.03
scale_max = 0.11
color = Color(0.928463, 0, 0.176222, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j47wa"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ae2"]
atlas = ExtResource("3_xa75v")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivevv"]
atlas = ExtResource("3_xa75v")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6jsd"]
atlas = ExtResource("3_xa75v")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qlh"]
atlas = ExtResource("3_xa75v")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sw5t"]
atlas = ExtResource("3_xa75v")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4jb"]
atlas = ExtResource("3_xa75v")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c68nv"]
atlas = ExtResource("3_xa75v")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c31lq"]
atlas = ExtResource("3_xa75v")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dof7"]
atlas = ExtResource("4_58ae2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y8w33"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ae2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivevv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6jsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sw5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij4jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c68nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c31lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dof7")
}],
"loop": false,
"name": &"death_effect",
"speed": 9.0
}]

[node name="player" type="CharacterBody2D"]
collision_mask = 15
script = ExtResource("1_kelma")
damege = 8
grenade_damage = 23

[node name="spwon_effect" type="GPUParticles2D" parent="."]
material = ExtResource("2_p6qlh")
position = Vector2(0, 0.833336)
emitting = false
amount = 250
texture = ExtResource("2_y8w33")
lifetime = 1.56
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ivevv")

[node name="hit_partcals" type="GPUParticles2D" parent="."]
material = ExtResource("2_p6qlh")
emitting = false
amount = 40
texture = ExtResource("2_y8w33")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_2sw5t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_j47wa")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.78814e-07, 4.76837e-07)
scale = Vector2(1.5, 1.5)

[node name="timers" type="Node" parent="."]

[node name="Attack_timer" type="Timer" parent="timers"]
wait_time = 0.4
one_shot = true

[node name="Attack_2_timer" type="Timer" parent="timers"]
wait_time = 1.5
one_shot = true

[node name="Hit_timer" type="Timer" parent="timers"]
wait_time = 0.64
one_shot = true

[node name="die_effect_timer" type="Timer" parent="timers"]
wait_time = 0.1
one_shot = true

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_y8w33")
animation = &"death_effect"
frame = 8
frame_progress = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="texts" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/texts"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = -21

[node name="hbox3" type="HBoxContainer" parent="CanvasLayer/texts/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 6

[node name="damage" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8627451, 0.8156863, 0, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 89
text = "score"

[node name="damage2" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox3"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9809359, 0.5677619, 0.26388457, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 89
text = "+"

[node name="hbox" type="HBoxContainer" parent="CanvasLayer/texts/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 6

[node name="damage" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.803541, 9.89328e-05, 5.40027e-05, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 100
text = "damage"

[node name="damage2" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.840301, 0.681177, 0.119402, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 100
text = "+"

[node name="hbox2" type="HBoxContainer" parent="CanvasLayer/texts/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="speed" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox2"]
layout_mode = 2
theme_override_colors/font_color = Color(1.05888e-06, 0.772583, 0.681319, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 100
text = "speed"

[node name="speed2" type="Label" parent="CanvasLayer/texts/VBoxContainer/hbox2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.840301, 0.681177, 0.119402, 1)
theme_override_fonts/font = ExtResource("5_ivevv")
theme_override_font_sizes/font_size = 100
text = "+"

[node name="markers" type="Node2D" parent="."]

[node name="rocket_position" type="Marker2D" parent="markers"]
position = Vector2(1, -32)

[node name="PointLight2D2" type="PointLight2D" parent="."]
visible = false
energy = 0.0
shadow_enabled = true
shadow_filter_smooth = 7.1
texture = ExtResource("6_r6jsd")
texture_scale = 0.36

[node name="sounds" type="Node2D" parent="."]

[node name="MinecraftHitSoundDjlunatique_com" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("8_c31lq")
volume_db = -3.3

[node name="hit loop" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("9_1sypm")
volume_db = -3.3
parameters/looping = false

[node name="Explosion312361" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("8_c68nv")

[node name="CollapsingInGrass101312Ao94e7v9" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("11_4ao7i")
volume_db = -7.0
parameters/looping = false

[node name="WalkingOnGrass363353" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("12_1sypm")
volume_db = -3.6
parameters/looping = true

[node name="GrenadeLauncher106342" type="AudioStreamPlayer2D" parent="sounds"]
position = Vector2(0, -1)
stream = ExtResource("12_2dof7")

[node name="MinecraftTypeFireworkBlast" type="AudioStreamPlayer2D" parent="sounds"]
position = Vector2(-1, -2)
stream = ExtResource("13_4ao7i")
volume_db = 3.0

[node name="FistFight192117" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource("15_fn0wv")
volume_db = -7.0

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="timers/Attack_timer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="timers/Attack_2_timer" to="." method="_on_attack_2_timer_timeout"]
[connection signal="timeout" from="timers/Hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="timers/die_effect_timer" to="." method="_on_die_effect_timer_timeout"]
